crates/backyard-parser/tests/snapshots/fors__basic.snap
---
source: crates/backyard-parser/tests/fors.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: for
    inits:
      - node_type: assignment
        left:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 105
            loc:
              start:
                line: 1
                column: 5
                offset: 5
              end:
                line: 1
                column: 6
                offset: 6
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 5
              offset: 5
            end:
              line: 1
              column: 6
              offset: 6
          leadings: ~
          trailings: ~
        operator:
          - 61
        right:
          node_type: number
          value:
            - 49
          loc:
            start:
              line: 1
              column: 10
              offset: 10
            end:
              line: 1
              column: 10
              offset: 10
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 8
            offset: 8
          end:
            line: 1
            column: 10
            offset: 10
        leadings: ~
        trailings: ~
    tests:
      - node_type: bin
        left:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 105
            loc:
              start:
                line: 1
                column: 13
                offset: 13
              end:
                line: 1
                column: 14
                offset: 14
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 13
              offset: 13
            end:
              line: 1
              column: 14
              offset: 14
          leadings: ~
          trailings: ~
        operator:
          - 60
          - 61
        right:
          node_type: number
          value:
            - 49
            - 48
          loc:
            start:
              line: 1
              column: 19
              offset: 19
            end:
              line: 1
              column: 19
              offset: 19
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 16
            offset: 16
          end:
            line: 1
            column: 19
            offset: 19
        leadings: ~
        trailings: ~
    increments:
      - node_type: post
        statement:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 105
            loc:
              start:
                line: 1
                column: 23
                offset: 23
              end:
                line: 1
                column: 24
                offset: 24
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 23
              offset: 23
            end:
              line: 1
              column: 24
              offset: 24
          leadings: ~
          trailings: ~
        operator:
          - 43
          - 43
        loc:
          start:
            line: 1
            column: 25
            offset: 25
          end:
            line: 1
            column: 25
            offset: 25
        leadings: ~
        trailings: ~
    body:
      node_type: block
      statements: []
      loc:
        start:
          line: 1
          column: 29
          offset: 29
        end:
          line: 2
          column: 0
          offset: 31
      leadings: ~
      trailings: ~
    body_type: Basic
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 2
        column: 0
        offset: 31
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 2
    column: 0
    offset: 31
leadings: ~
trailings: ~
