crates/backyard-parser/tests/snapshots/fors__no_body.snap
---
source: crates/backyard-parser/tests/fors.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: for
    inits:
      - node_type: assignment
        left:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 105
            loc:
              start:
                line: 1
                column: 5
                offset: 5
              end:
                line: 1
                column: 6
                offset: 6
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 5
              offset: 5
            end:
              line: 1
              column: 6
              offset: 6
          leadings: ~
          trailings: ~
        operator:
          - 61
        right:
          node_type: number
          value:
            - 49
          loc:
            start:
              line: 1
              column: 10
              offset: 10
            end:
              line: 1
              column: 10
              offset: 10
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 8
            offset: 8
          end:
            line: 1
            column: 10
            offset: 10
        leadings: ~
        trailings: ~
      - node_type: assignment
        left:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 106
            loc:
              start:
                line: 1
                column: 13
                offset: 13
              end:
                line: 1
                column: 14
                offset: 14
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 13
              offset: 13
            end:
              line: 1
              column: 14
              offset: 14
          leadings: ~
          trailings: ~
        operator:
          - 61
        right:
          node_type: number
          value:
            - 48
          loc:
            start:
              line: 1
              column: 18
              offset: 18
            end:
              line: 1
              column: 18
              offset: 18
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 16
            offset: 16
          end:
            line: 1
            column: 18
            offset: 18
        leadings: ~
        trailings: ~
    tests:
      - node_type: bin
        left:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 105
            loc:
              start:
                line: 1
                column: 21
                offset: 21
              end:
                line: 1
                column: 22
                offset: 22
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 21
              offset: 21
            end:
              line: 1
              column: 22
              offset: 22
          leadings: ~
          trailings: ~
        operator:
          - 60
          - 61
        right:
          node_type: number
          value:
            - 49
            - 48
          loc:
            start:
              line: 1
              column: 27
              offset: 27
            end:
              line: 1
              column: 27
              offset: 27
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 24
            offset: 24
          end:
            line: 1
            column: 27
            offset: 27
        leadings: ~
        trailings: ~
    increments:
      - node_type: assignment
        left:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 106
            loc:
              start:
                line: 1
                column: 31
                offset: 31
              end:
                line: 1
                column: 32
                offset: 32
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 31
              offset: 31
            end:
              line: 1
              column: 32
              offset: 32
          leadings: ~
          trailings: ~
        operator:
          - 43
          - 61
        right:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 105
            loc:
              start:
                line: 1
                column: 37
                offset: 37
              end:
                line: 1
                column: 38
                offset: 38
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 37
              offset: 37
            end:
              line: 1
              column: 38
              offset: 38
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 34
            offset: 34
          end:
            line: 1
            column: 37
            offset: 37
        leadings: ~
        trailings: ~
      - node_type: print
        statement:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 105
            loc:
              start:
                line: 1
                column: 47
                offset: 47
              end:
                line: 1
                column: 48
                offset: 48
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 47
              offset: 47
            end:
              line: 1
              column: 48
              offset: 48
          leadings: ~
          trailings: ~
        loc:
          start:
            line: 1
            column: 41
            offset: 41
          end:
            line: 1
            column: 47
            offset: 47
        leadings: ~
        trailings: ~
      - node_type: post
        statement:
          node_type: variable
          name:
            node_type: identifier
            name:
              - 105
            loc:
              start:
                line: 1
                column: 51
                offset: 51
              end:
                line: 1
                column: 52
                offset: 52
            leadings: ~
            trailings: ~
          loc:
            start:
              line: 1
              column: 51
              offset: 51
            end:
              line: 1
              column: 52
              offset: 52
          leadings: ~
          trailings: ~
        operator:
          - 43
          - 43
        loc:
          start:
            line: 1
            column: 53
            offset: 53
          end:
            line: 1
            column: 53
            offset: 53
        leadings: ~
        trailings: ~
    body: ~
    body_type: Empty
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 55
        offset: 55
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 56
    offset: 56
leadings: ~
trailings: ~
